--- a/tp_diseno/src/main/java/grupo3a/tp_diseno/Interfaces/RegistrarBedel.form
+++ b/tp_diseno/src/main/java/grupo3a/tp_diseno/Interfaces/RegistrarBedel.form
@@ -46,6 +46,9 @@
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
             <Property name="text" type="java.lang.String" value="Registrar Bedel"/>
+            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[294, 450]"/>
+            </Property>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
