Menu Bedel y reorganización interfaces

--- a/tp_diseno/src/main/java/grupo3a/tp_diseno/Interfaces/Bedel/RegistrarReserva/RegistrarReservaDatos.form
+++ b/tp_diseno/src/main/java/grupo3a/tp_diseno/Interfaces/Bedel/RegistrarReserva/RegistrarReservaDatos.form
@@ -106,7 +106,7 @@
                       <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
-                      <Component id="jPanel5" pref="314" max="32767" attributes="0"/>
+                      <Component id="jPanel5" pref="312" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -228,6 +228,9 @@
                         </Component>
                         <Component class="javax.swing.JFormattedTextField" name="tfCantAlumnos">
                           <Properties>
+                            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                              <Color blue="99" green="99" red="99" type="rgb"/>
+                            </Property>
                             <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
                               <Format format="0" subtype="-1" type="0"/>
                             </Property>
@@ -276,6 +279,9 @@
                         </Component>
                         <Component class="javax.swing.JComboBox" name="cbTipoAula">
                           <Properties>
+                            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                              <Color blue="99" green="99" red="99" type="rgb"/>
+                            </Property>
                             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                               <StringArray count="3">
                                 <StringItem index="0" value="Estandar"/>
@@ -334,6 +340,11 @@
                           </Properties>
                         </Component>
                         <Component class="javax.swing.JTextField" name="tfNombreCatedra">
+                          <Properties>
+                            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                              <Color blue="99" green="99" red="99" type="rgb"/>
+                            </Property>
+                          </Properties>
                           <Events>
                             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tfNombreCatedraActionPerformed"/>
                           </Events>
@@ -397,6 +408,11 @@
                           </Properties>
                         </Component>
                         <Component class="javax.swing.JTextField" name="tfNombreDocente">
+                          <Properties>
+                            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                              <Color blue="99" green="99" red="99" type="rgb"/>
+                            </Property>
+                          </Properties>
                           <Events>
                             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tfNombreDocenteActionPerformed"/>
                           </Events>
@@ -443,6 +459,11 @@
                           </Properties>
                         </Component>
                         <Component class="javax.swing.JTextField" name="tfApellidoDocente">
+                          <Properties>
+                            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                              <Color blue="99" green="99" red="99" type="rgb"/>
+                            </Property>
+                          </Properties>
                           <Events>
                             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tfApellidoDocenteActionPerformed"/>
                           </Events>
@@ -490,6 +511,11 @@
                           </Properties>
                         </Component>
                         <Component class="javax.swing.JTextField" name="tfCorreo">
+                          <Properties>
+                            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                              <Color blue="99" green="99" red="99" type="rgb"/>
+                            </Property>
+                          </Properties>
                           <Events>
                             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tfCorreoActionPerformed"/>
                           </Events>
